--- a/share/ui/opengl.ui
+++ b/share/ui/opengl.ui
@@ -577,4 +577,64 @@
     <property name="upper">25</property>
     <property name="step_increment">1</property>
   </object>
+  <object class="GtkFrame" id="ColorPrefTab">
+    <property name="visible">True</property>
+    <property name="label_xalign">0</property>
+    <property name="shadow_type">none</property>
+    <child>
+      <object class="GtkAlignment" id="alignment4">
+        <property name="visible">True</property>
+        <property name="left_padding">12</property>
+        <child>
+          <object class="GtkTable" id="ColorTable">
+            <property name="visible">True</property>
+            <property name="n_columns">2</property>
+            <property name="column_spacing">3</property>
+            <property name="row_spacing">3</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child type="label">
+      <object class="GtkLabel" id="ColorSelectionFrameLabel">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">&lt;b&gt;Color Selection&lt;/b&gt;</property>
+        <property name="use_markup">True</property>
+      </object>
+    </child>
+  </object>
+  <object class="GtkFrame" id="DisplayItemsPrefTab">
+    <property name="visible">True</property>
+    <property name="label_xalign">0</property>
+    <property name="shadow_type">none</property>
+    <child>
+      <object class="GtkAlignment" id="alignment21">
+        <property name="visible">True</property>
+        <property name="left_padding">12</property>
+        <child>
+          <object class="GtkVBox" id="PreferencesVisibleItemsBox">
+            <property name="visible">True</property>
+            <property name="orientation">vertical</property>
+            <property name="spacing">2</property>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child type="label">
+      <object class="GtkLabel" id="VisualSettingsFrameLabel">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">&lt;b&gt;Display settings&lt;/b&gt;</property>
+        <property name="use_markup">True</property>
+      </object>
+    </child>
+  </object>
 </interface>
