--- a/share/ui/model_support.ui
+++ b/share/ui/model_support.ui
@@ -20,6 +20,7 @@
                 <child>
                   <object class="GtkHButtonBox" id="hbuttonbox1">
                     <property name="visible">True</property>
+                    <property name="spacing">3</property>
                     <child>
                       <object class="GtkComboBox" id="SupportGridTypesControl">
                         <property name="visible">True</property>
