--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -504,7 +504,7 @@ You should have received a copy of the GNU General Public License along with thi
     <property name="label">_Settings</property>
   </object>
   <object class="GtkAction" id="UndoButton">
-    <property name="label">Undo latest model change</property>
+    <property name="label">Undo latest workspace change</property>
     <property name="stock_id">gtk-undo</property>
   </object>
   <object class="GtkAction" id="ViewMenu">
