--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -89,6 +89,10 @@
     <property name="label">User _Manual: Overview</property>
     <property name="stock_id">gtk-help</property>
   </object>
+  <object class="GtkAction" id="ResetWorkspace">
+    <property name="label">Reset Workspace to Defaults</property>
+    <property name="tooltip">Reset models, tools, processes, bounds and task definitions to their default values.</property>
+  </object>
   <object class="GtkAction" id="LoadWorkspace">
     <property name="label">_Load Workspace ...</property>
     <property name="tooltip">Load model, tool, process, bound and task definitions from a file.</property>
